ipc/ipdl/test/ipdl/error/actorparam_badState.ipdl
protocol actorparam_badState {

child:
    Msg(actorparam_badState:FARGEL p);
    delete();

state S1:
    send Msg goto S1;
    send delete;
};
